also add cpio to build-packages

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -62,5 +62,6 @@ parts:
       snapcraftctl build
     kernel-with-firmware: false
     build-packages:
+      - cpio
       - libssl-dev
     after: [ firmware ]
