--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,6 +14,12 @@ parts:
     override-build: |
       mkdir -p $SNAPCRAFT_PART_INSTALL/firmware
       cp -av ./* $SNAPCRAFT_PART_INSTALL/firmware/
+      echo "overlaying armbian firmware"
+      git clone https://github.com/armbian/firmware.git armbian
+      cp -av armbian/xr819 $SNAPCRAFT_PART_INSTALL/firmware/
+      #cp -av armbian/ap6212/fw_bcm43438a1.bin $SNAPCRAFT_PART_INSTALL/firmware/brcm/brcmfmac43430-sdio.bin
+    build-packages:
+      - git
   kernel:
     plugin: kernel
     source: git://kernel.ubuntu.com/ubuntu/ubuntu-bionic.git
@@ -22,35 +28,95 @@ parts:
     source-tag: Ubuntu-4.15.0-34.37
     kconfigflavour: generic
     kconfigs:
-      - CONFIG_DEBUG_INFO=n
-      - CONFIG_ARCH_SUNXI=y
       - CONFIG_AHCI_SUNXI=y
-      - CONFIG_RESET_SUNXI=y
-      - CONFIG_SUNXI_SRAM=y
+      - CONFIG_ARCH_SUNXI=y
+      - CONFIG_CAN_SUN4I=m
+      - CONFIG_CRYPTO_DES=m
+      - CONFIG_CRYPTO_DEV_SUN4I_SS=y
+      - CONFIG_DMA_SUN4I=y
+      - CONFIG_DMA_SUN6I=y
+      - CONFIG_DRM_SUN4I=m
       - CONFIG_DWMAC_SUNXI=m
+      - CONFIG_I2C_SUN6I_P2WI=y
       - CONFIG_IR_SUNXI=m
+      - CONFIG_KEYBOARD_SUN4I_LRADC=y
+      - CONFIG_MACH_SUN4I=y
+      - CONFIG_MACH_SUN5I=y
+      - CONFIG_MACH_SUN6I=y
+      - CONFIG_MACH_SUN7I=y
+      - CONFIG_MACH_SUN8I=y
+      - CONFIG_MACH_SUN9I=y
+      - CONFIG_MDIO_SUN4I=y
+      - CONFIG_MFD_SUN6I_PRCM=y
       - CONFIG_MMC_SUNXI=y
       - CONFIG_NET_VENDOR_ALLWINNER=y
+      - CONFIG_NLS_ISO8859_1=y
+      - CONFIG_NVMEM=m
       - CONFIG_NVMEM_SUNXI_SID=y
+      - CONFIG_NVMEM=y
+      - CONFIG_PHY_SUN4I_USB=y
+      - CONFIG_PHY_SUN9I_USB=y
+      - CONFIG_PINCTRL_SUN4I_A10=y
+      - CONFIG_PINCTRL_SUN5I=y
+      - CONFIG_PINCTRL_SUN6I_A31_R=y
+      - CONFIG_PINCTRL_SUN6I_A31=y
+      - CONFIG_PINCTRL_SUN7I_A20=y
+      - CONFIG_PINCTRL_SUN8I_A23_R=y
+      - CONFIG_PINCTRL_SUN8I_A23=y
+      - CONFIG_PINCTRL_SUN8I_A33=y
+      - CONFIG_PINCTRL_SUN8I_A83T=y
+      - CONFIG_PINCTRL_SUN8I_H3_R=y
+      - CONFIG_PINCTRL_SUN8I_H3=y
+      - CONFIG_PINCTRL_SUN8I_V3S=y
+      - CONFIG_PINCTRL_SUN9I_A80_R=y
+      - CONFIG_PINCTRL_SUN9I_A80=y
       - CONFIG_PINCTRL_SUNXI=y
+      - CONFIG_PWM_SUN4I=y
+      - CONFIG_RESET_SUNXI=y
+      - CONFIG_RTC_DRV_SUN6I=y
       - CONFIG_RTC_DRV_SUNXI=y
-      - CONFIG_SUNXI_CCU=y
+      - CONFIG_SERIAL_8250_DW=y
+      - CONFIG_SND_SUN4I_CODEC=m
+      - CONFIG_SND_SUN4I_I2S=m
+      - CONFIG_SND_SUN4I_SPDIF=m
+      - CONFIG_SND_SUN8I_CODEC_ANALOG=m
+      - CONFIG_SND_SUN8I_CODEC=m
+      - CONFIG_SPI_SUN4I=y
+      - CONFIG_SPI_SUN6I=y
+      - CONFIG_SUN4I_EMAC=m
+      - CONFIG_SUN4I_TIMER=y
+      - CONFIG_SUN5I_CCU=y
+      - CONFIG_SUN5I_HSTIMER=y
+      - CONFIG_SUN6I_A31_CCU=y
+      - CONFIG_SUN8I_A23_CCU=y
+      - CONFIG_SUN8I_A33_CCU=y
+      - CONFIG_SUN8I_EMAC=m
+      - CONFIG_SUN8I_H3_CCU=y
+      - CONFIG_SUN8I_V3S_CCU=y
+      - CONFIG_SUN9I_A80_CCU=y
       - CONFIG_SUNXI_CCU_DIV=y
       - CONFIG_SUNXI_CCU_FRAC=y
       - CONFIG_SUNXI_CCU_GATE=y
       - CONFIG_SUNXI_CCU_MP=y
       - CONFIG_SUNXI_CCU_MULT=y
       - CONFIG_SUNXI_CCU_MUX=y
-      - CONFIG_SUNXI_CCU_NK=y
-      - CONFIG_SUNXI_CCU_NKM=y
       - CONFIG_SUNXI_CCU_NKMP=y
+      - CONFIG_SUNXI_CCU_NKM=y
+      - CONFIG_SUNXI_CCU_NK=y
       - CONFIG_SUNXI_CCU_NM=y
       - CONFIG_SUNXI_CCU_PHASE=y
+      - CONFIG_SUNXI_CCU=y
       - CONFIG_SUNXI_RSB=y
+      - CONFIG_SUNXI_SRAM=y
       - CONFIG_SUNXI_WATCHDOG=y
+      - CONFIG_TOUCHSCREEN_SUN4I=y
+      - CONFIG_DEBUG_INFO=n
       - CONFIG_DWMAC_SUN8I=m
     override-pull: |
       snapcraftctl pull
+      set -e
+      echo "applying nanopi-wlan.patch"
+      git apply ../../../patches/nanopi-wlan.patch
       echo "setting version to $(git tag|sed 's/^Ubuntu-//')"
       snapcraftctl set-version "$(git tag|sed 's/^Ubuntu-//')"
     override-build: |
