--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -25,61 +25,44 @@ parts:
     source-tag: Ubuntu-4.15.0-34.37
     kconfigflavour: generic
     kconfigs:
-      - CONFIG_AHCI_SUNXI=y
+      - CONFIG_DEBUG_INFO=n
+      - CONFIG_NO_HZ=y
+      - CONFIG_HIGH_RES_TIMERS=y
+      - CONFIG_CGROUPS=y
+      - CONFIG_BLK_DEV_INITRD=y
+      - CONFIG_PERF_EVENTS=y
+      - CONFIG_MODULES=y
+      - CONFIG_MODULE_UNLOAD=y
       - CONFIG_ARCH_SUNXI=y
-      - CONFIG_CAN_SUN4I=m
-      - CONFIG_CRYPTO_DES=m
-      - CONFIG_CRYPTO_DEV_SUN4I_SS=y
-      - CONFIG_DMA_SUN4I=y
-      - CONFIG_DMA_SUN6I=y
-      - CONFIG_DRM_SUN4I=m
+      - CONFIG_SMP=y
+      - CONFIG_NR_CPUS=8
+      - CONFIG_AEABI=y
+      - CONFIG_HIGHMEM=y
+      - CONFIG_CMA=y
+      - CONFIG_ARM_APPENDED_DTB=y
+      - CONFIG_ARM_ATAG_DTB_COMPAT=y
+      - CONFIG_CPU_FREQ=y
+      - CONFIG_CPUFREQ_DT=y
+      - CONFIG_VFP=y
+      - CONFIG_NEON=y
+      - CONFIG_NET=y
+      - CONFIG_PACKET=y
+      - CONFIG_UNIX=y
+      - CONFIG_INET=y
+      - CONFIG_IP_PNP=y
+      - CONFIG_IP_PNP_DHCP=y
+      - CONFIG_IP_PNP_BOOTP=y
+      - CONFIG_CAN=y
+      - CONFIG_CAN_SUN4I=y
+      - CONFIG_DEVTMPFS=y
+      - CONFIG_DEVTMPFS_MOUNT=y
+      - CONFIG_DMA_CMA=y
+      - CONFIG_BLK_DEV_SD=y
+      - CONFIG_ATA=y
+      - CONFIG_AHCI_SUNXI=y
+      - CONFIG_NETDEVICES=y
       - CONFIG_DWMAC_SUNXI=m
-      - CONFIG_I2C_SUN6I_P2WI=y
-      - CONFIG_IR_SUNXI=m
-      - CONFIG_KEYBOARD_SUN4I_LRADC=y
-      - CONFIG_MACH_SUN4I=y
-      - CONFIG_MACH_SUN5I=y
-      - CONFIG_MACH_SUN6I=y
-      - CONFIG_MACH_SUN7I=y
-      - CONFIG_MACH_SUN8I=y
-      - CONFIG_MACH_SUN9I=y
-      - CONFIG_MDIO_SUN4I=y
-      - CONFIG_MFD_SUN6I_PRCM=y
-      - CONFIG_MMC_SUNXI=y
-      - CONFIG_NET_VENDOR_ALLWINNER=y
-      - CONFIG_NLS_ISO8859_1=y
-      - CONFIG_NVMEM=m
-      - CONFIG_NVMEM_SUNXI_SID=y
-      - CONFIG_NVMEM=y
-      - CONFIG_PHY_SUN4I_USB=y
-      - CONFIG_PHY_SUN9I_USB=y
-      - CONFIG_PINCTRL_SUN4I_A10=y
-      - CONFIG_PINCTRL_SUN5I=y
-      - CONFIG_PINCTRL_SUN6I_A31_R=y
-      - CONFIG_PINCTRL_SUN6I_A31=y
-      - CONFIG_PINCTRL_SUN7I_A20=y
-      - CONFIG_PINCTRL_SUN8I_A23_R=y
-      - CONFIG_PINCTRL_SUN8I_A23=y
-      - CONFIG_PINCTRL_SUN8I_A33=y
-      - CONFIG_PINCTRL_SUN8I_A83T=y
-      - CONFIG_PINCTRL_SUN8I_H3_R=y
-      - CONFIG_PINCTRL_SUN8I_H3=y
-      - CONFIG_PINCTRL_SUN8I_V3S=y
-      - CONFIG_PINCTRL_SUN9I_A80_R=y
-      - CONFIG_PINCTRL_SUN9I_A80=y
-      - CONFIG_PINCTRL_SUNXI=y
-      - CONFIG_PWM_SUN4I=y
-      - CONFIG_RESET_SUNXI=y
-      - CONFIG_RTC_DRV_SUN6I=y
-      - CONFIG_RTC_DRV_SUNXI=y
-      - CONFIG_SERIAL_8250_DW=y
-      - CONFIG_SND_SUN4I_CODEC=m
-      - CONFIG_SND_SUN4I_I2S=m
-      - CONFIG_SND_SUN4I_SPDIF=m
-      - CONFIG_SND_SUN8I_CODEC_ANALOG=m
-      - CONFIG_SND_SUN8I_CODEC=m
-      - CONFIG_SPI_SUN4I=y
-      - CONFIG_SPI_SUN6I=y
+      - CONFIG_DWMAC_SUN8I=m
       - CONFIG_SUN4I_EMAC=m
       - CONFIG_SUN4I_TIMER=y
       - CONFIG_SUN5I_CCU=y
@@ -105,15 +88,135 @@ parts:
       - CONFIG_SUNXI_CCU=y
       - CONFIG_SUNXI_RSB=y
       - CONFIG_SUNXI_SRAM=y
-      - CONFIG_SUNXI_WATCHDOG=y
+      - CONFIG_STMMAC_ETH=m
+      - CONFIG_INPUT_EVDEV=y
+      - CONFIG_KEYBOARD_SUN4I_LRADC=y
+      - CONFIG_MACH_SUN4I=y
+      - CONFIG_MACH_SUN5I=y
+      - CONFIG_MACH_SUN6I=y
+      - CONFIG_MACH_SUN7I=y
+      - CONFIG_MACH_SUN8I=y
+      - CONFIG_MACH_SUN9I=y
+      - CONFIG_MDIO_SUN4I=y
+      - CONFIG_INPUT_TOUCHSCREEN=y
       - CONFIG_TOUCHSCREEN_SUN4I=y
-      - CONFIG_DEBUG_INFO=n
-      - CONFIG_DWMAC_SUN8I=m
+      - CONFIG_INPUT_MISC=y
+      - CONFIG_INPUT_AXP20X_PEK=y
+      - CONFIG_SERIAL_8250=y
+      - CONFIG_SERIAL_8250_CONSOLE=y
+      - CONFIG_SERIAL_8250_NR_UARTS=8
+      - CONFIG_SERIAL_8250_RUNTIME_UARTS=8
+      - CONFIG_SERIAL_8250_DW=y
+      - CONFIG_SERIAL_OF_PLATFORM=y
+      - CONFIG_I2C_CHARDEV=y
+      - CONFIG_I2C_MV64XXX=y
+      - CONFIG_I2C_SUN6I_P2WI=y
+      - CONFIG_SPI=y
+      - CONFIG_SPI_SUN4I=y
+      - CONFIG_SPI_SUN6I=y
+      - CONFIG_GPIO_SYSFS=y
+      - CONFIG_POWER_SUPPLY=y
+      - CONFIG_CHARGER_AXP20X=y
+      - CONFIG_BATTERY_AXP20X=y
+      - CONFIG_AXP20X_POWER=y
+      - CONFIG_THERMAL=y
+      - CONFIG_CPU_THERMAL=y
+      - CONFIG_WATCHDOG=y
+      - CONFIG_SUNXI_WATCHDOG=y
+      - CONFIG_MFD_AC100=y
+      - CONFIG_MFD_AXP20X_I2C=y
+      - CONFIG_MFD_AXP20X_RSB=y
+      - CONFIG_MFD_SUN6I_PRCM=y
+      - CONFIG_REGULATOR=y
+      - CONFIG_REGULATOR_FIXED_VOLTAGE=y
+      - CONFIG_REGULATOR_AXP20X=y
+      - CONFIG_REGULATOR_GPIO=y
+      - CONFIG_MEDIA_SUPPORT=y
+      - CONFIG_RC_CORE=y
+      - CONFIG_RC_DEVICES=y
+      - CONFIG_IR_SUNXI=y
+      - CONFIG_DRM=y
+      - CONFIG_DRM_SUN4I=y
+      - CONFIG_DRM_DUMB_VGA_DAC=y
+      - CONFIG_FB_SIMPLE=y
+      - CONFIG_SOUND=y
+      - CONFIG_SND=y
+      - CONFIG_SND_SOC=y
+      - CONFIG_SND_SUN4I_CODEC=y
+      - CONFIG_SND_SUN4I_I2S=m
+      - CONFIG_SND_SUN4I_SPDIF=m
+      - CONFIG_SND_SUN8I_CODEC_ANALOG=m
+      - CONFIG_SND_SUN8I_CODEC=m
+      - CONFIG_USB=y
+      - CONFIG_USB_EHCI_HCD=y
+      - CONFIG_USB_EHCI_HCD_PLATFORM=y
+      - CONFIG_USB_OHCI_HCD=y
+      - CONFIG_USB_OHCI_HCD_PLATFORM=y
+      - CONFIG_USB_MUSB_HDRC=y
+      - CONFIG_USB_MUSB_SUNXI=y
+      - CONFIG_NOP_USB_XCEIV=y
+      - CONFIG_USB_GADGET=y
+      - CONFIG_MMC=y
+      - CONFIG_MMC_SUNXI=y
+      - CONFIG_MMC_UNSAFE_RESUME=y
+      - CONFIG_NET_VENDOR_ALLWINNER=y
+      - CONFIG_NEW_LEDS=y
+      - CONFIG_LEDS_CLASS=y
+      - CONFIG_LEDS_GPIO=y
+      - CONFIG_LEDS_TRIGGERS=y
+      - CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+      - CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
+      - CONFIG_RTC_CLASS=y
+      - CONFIG_RTC_DRV_AC100=y
+      - CONFIG_RTC_DRV_SUN6I=y
+      - CONFIG_RTC_DRV_SUNXI=y
+      - CONFIG_DMADEVICES=y
+      - CONFIG_DMA_SUN4I=y
+      - CONFIG_DMA_SUN6I=y
+      - CONFIG_EXTCON=y
+      - CONFIG_IIO=y
+      - CONFIG_AXP20X_ADC=y
+      - CONFIG_PWM=y
+      - CONFIG_PWM_SUN4I=y
+      - CONFIG_RESET_SUNXI=y
+      - CONFIG_PHY_SUN4I_USB=y
+      - CONFIG_PHY_SUN9I_USB=y
+      - CONFIG_PINCTRL_SUN4I_A10=y
+      - CONFIG_PINCTRL_SUN5I=y
+      - CONFIG_PINCTRL_SUN6I_A31_R=y
+      - CONFIG_PINCTRL_SUN6I_A31=y
+      - CONFIG_PINCTRL_SUN7I_A20=y
+      - CONFIG_PINCTRL_SUN8I_A23_R=y
+      - CONFIG_PINCTRL_SUN8I_A23=y
+      - CONFIG_PINCTRL_SUN8I_A33=y
+      - CONFIG_PINCTRL_SUN8I_A83T=y
+      - CONFIG_PINCTRL_SUN8I_H3_R=y
+      - CONFIG_PINCTRL_SUN8I_H3=y
+      - CONFIG_PINCTRL_SUN8I_V3S=y
+      - CONFIG_PINCTRL_SUN9I_A80_R=y
+      - CONFIG_PINCTRL_SUN9I_A80=y
+      - CONFIG_PINCTRL_SUNXI=y
+      - CONFIG_NVMEM=y
+      - CONFIG_NVMEM_SUNXI_SID=y
+      - CONFIG_EXT4_FS=y
+      - CONFIG_VFAT_FS=y
+      - CONFIG_TMPFS=y
+      - CONFIG_NFS_FS=y
+      - CONFIG_NFS_V3_ACL=y
+      - CONFIG_NFS_V4=y
+      - CONFIG_ROOT_NFS=y
+      - CONFIG_NLS_CODEPAGE_437=y
+      - CONFIG_NLS_ISO8859_1=y
+      - CONFIG_PRINTK_TIME=y
+      - CONFIG_DEBUG_FS=y
+      - CONFIG_CRYPTO_DES=m
+      - CONFIG_CRYPTO_DEV_SUN4I_SS=y
     override-pull: |
       snapcraftctl pull
       set -e
-      echo "applying nanopi-wlan.patch"
-      git apply ../../../patches/nanopi-wlan.patch
+      echo "applying nanopi devicetree patches"
+      git apply -v ../../../patches/nanopi-air-wlan.patch
+      git apply -v ../../../patches/nanopi-neo-dts.patch
       echo "setting version to $(git tag|sed 's/^Ubuntu-//')"
       snapcraftctl set-version "$(git tag|sed 's/^Ubuntu-//')"
     override-build: |
@@ -121,6 +224,11 @@ parts:
         $SNAPCRAFT_PART_BUILD/scripts/ubuntu-retpoline-extract-one
       snapcraftctl build
     kernel-with-firmware: false
+    kernel-initrd-modules:
+      - g_serial
+      - u_serial
+      - usb_f_acm
+      - libcomposite
     build-packages:
       - cpio
       - libssl-dev
@@ -134,6 +242,8 @@ parts:
         export ARCH=arm
         export CROSS_COMPILE=arm-linux-gnueabihf-
       fi
+      # quieten massive log spam
+      sed -i 's/^.*missed interrupt.*$//' bh.c
       export INSTALL_MOD_PATH=$SNAPCRAFT_PART_INSTALL
       make -C ../../kernel/build M=$PWD modules
       make -C ../../kernel/build M=$PWD modules_install
