set default architecture, try to force usb-otg to peripherial mode on nanopi-neo

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -6,6 +6,10 @@ grade: stable
 confinement: strict
 type: kernel
 
+architectures:
+  - build-on: armhf
+    run-on: armhf
+
 parts:
   firmware:
     plugin: nil
