--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,12 +7,8 @@ confinement: strict
 type: kernel
 
 architectures:
-  - build-on: amd64
+  - build-on: armhf
     run-on: armhf
-
-environment:
-  ARCH: arm
-  CROSS_COMPILE: arm-linux-gnueabihf-
 
 parts:
   firmware:
@@ -230,10 +226,6 @@ parts:
     override-build: |
       cp debian/scripts/retpoline-extract-one \
         $SNAPCRAFT_PART_BUILD/scripts/ubuntu-retpoline-extract-one
-      if [ "$(arch)" != "armv7l" ]; then
-        export ARCH=arm
-        export CROSS_COMPILE=arm-linux-gnueabihf-
-      fi
       snapcraftctl build
     kernel-with-firmware: false
     kernel-initrd-modules:
@@ -244,8 +236,6 @@ parts:
     build-packages:
       - cpio
       - libssl-dev
-      - on amd64 to armhf:
-        - gcc-arm-linux-gnueabihf:amd64
     after: [ firmware ]
   xradio-driver:
     source: https://github.com/fifteenhex/xradio.git
