--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -152,13 +152,13 @@ parts:
       - CONFIG_SND_SUN8I_CODEC_ANALOG=m
       - CONFIG_SND_SUN8I_CODEC=m
       - CONFIG_USB=y
-      - CONFIG_USB_EHCI_HCD=y
-      - CONFIG_USB_EHCI_HCD_PLATFORM=y
-      - CONFIG_USB_OHCI_HCD=y
-      - CONFIG_USB_OHCI_HCD_PLATFORM=y
+      - CONFIG_USB_EHCI_HCD=m
+      - CONFIG_USB_EHCI_HCD_PLATFORM=m
+      - CONFIG_USB_OHCI_HCD=m
+      - CONFIG_USB_OHCI_HCD_PLATFORM=m
       - CONFIG_USB_MUSB_HDRC=y
       - CONFIG_USB_MUSB_SUNXI=y
-      - CONFIG_NOP_USB_XCEIV=y
+      - CONFIG_NOP_USB_XCEIV=m
       - CONFIG_USB_GADGET=y
       - CONFIG_MMC=y
       - CONFIG_MMC_SUNXI=y
