--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -158,7 +158,7 @@ parts:
       - CONFIG_USB_OHCI_HCD_PLATFORM=m
       - CONFIG_USB_MUSB_HDRC=y
       - CONFIG_USB_MUSB_SUNXI=y
-      - CONFIG_NOP_USB_XCEIV=m
+      - CONFIG_NOP_USB_XCEIV=y
       - CONFIG_USB_GADGET=y
       - CONFIG_MMC=y
       - CONFIG_MMC_SUNXI=y
