--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -152,8 +152,8 @@ parts:
       - CONFIG_SND_SUN8I_CODEC_ANALOG=m
       - CONFIG_SND_SUN8I_CODEC=m
       - CONFIG_USB=y
-      - CONFIG_USB_EHCI_HCD=m
-      - CONFIG_USB_EHCI_HCD_PLATFORM=m
+      - CONFIG_USB_EHCI_HCD=y
+      - CONFIG_USB_EHCI_HCD_PLATFORM=y
       - CONFIG_USB_OHCI_HCD=m
       - CONFIG_USB_OHCI_HCD_PLATFORM=m
       - CONFIG_USB_MUSB_HDRC=y
