--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -161,6 +161,8 @@ parts:
       - CONFIG_NOP_USB_XCEIV=y
       - CONFIG_USB_GADGET=y
       - CONFIG_MMC=y
+      - CONFIG_MMC_DW=y
+      - CONFIG_MMC_DW_ROCKCHIP=y
       - CONFIG_MMC_SUNXI=y
       - CONFIG_MMC_UNSAFE_RESUME=y
       - CONFIG_NET_VENDOR_ALLWINNER=y
