--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -123,8 +123,10 @@ parts:
       - CONFIG_CHARGER_AXP20X=y
       - CONFIG_BATTERY_AXP20X=y
       - CONFIG_AXP20X_POWER=y
+      - CONFIG_ROCKCHIP_IODOMAIN=y
       - CONFIG_THERMAL=y
       - CONFIG_CPU_THERMAL=y
+      - CONFIG_ROCKCHIP_THERMAL=y
       - CONFIG_WATCHDOG=y
       - CONFIG_SUNXI_WATCHDOG=y
       - CONFIG_MFD_AC100=y
@@ -185,6 +187,7 @@ parts:
       - CONFIG_PWM=y
       - CONFIG_PWM_SUN4I=y
       - CONFIG_RESET_SUNXI=y
+      - CONFIG_ROCKCHIP_PHY=y
       - CONFIG_PHY_SUN4I_USB=y
       - CONFIG_PHY_SUN9I_USB=y
       - CONFIG_PINCTRL_SUN4I_A10=y
@@ -217,6 +220,7 @@ parts:
       - CONFIG_DEBUG_FS=y
       - CONFIG_CRYPTO_DES=m
       - CONFIG_CRYPTO_DEV_SUN4I_SS=y
+      - CONFIG_CRYPTO_DEV_ROCKCHIP=m
     override-pull: |
       snapcraftctl pull
       set -e
