add necessary nand pins for a23-a33 dtbs

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -225,6 +225,7 @@ parts:
       snapcraftctl pull
       set -e
       echo "applying nanopi devicetree patches"
+      git apply -v ../../../patches/nand-pins.patch
       git apply -v ../../../patches/nanopi-air-wlan.patch
       git apply -v ../../../patches/nanopi-neo-dts.patch
       git apply -v ../../../patches/nanopi-mac-addr.patch
